9/19/22
	Added test cases
	Added support for Digit Count Cages (thanks clover!)
	Fixed 1-off error in setGlobalEntropy introduced when input was migrated from 0-base to 1-base
	Added test mode to countSolutions method to run tests on partial puzzles with multiple solutions

9/18/22
	Added some debug code to try to troubleshoot weird Broken 159 error in finding all solutions. (Repeatedly reports same solution.)
	Generalized doubler code to accomodate variants, including arbitrary affine transformations (ax+b) and double-or-nothing rules. New framework allows additional generalizations.
	Added new test cases

9/17/22bis
	Added test cases
	Added aliases for EvenOdd (to OddEven) and MinMax (to MaxMin) so that both directions should work seemlessly
	Added Isotopes support per request from rockratzero

9/17/22
	Added support for nabner lines
	Updated whispers line logic to use a generic minimum whispers and maximum whispers, and alias the existing nationality lines
	Updated sandwich sums to allow arbitrary "bread" digits for the sandwich on a constraint by constraint basis
	Implemented Next-To-Nine constraints
	Fixed error in doubler and japanese sum sudoku...needed to synchronize additional negative constraint variable between init methods.
	Added 7 new test cases

9/16/22
	Implemented MOTE (more odd than even) and METO (more even than odd) cages.
	Implemented consecutive quads contstraints, including negative constraint (thanks for the inspiration in today's GAS, clover!)
	Updated Kropki code to allow addition of individual anti-Kropki constraints, and modified negative constraint to call it
	Updated XVXV code to allow addition of individual anti-XVXV constraints, and modified negative constraint to call it
	Updated XV code to allow addition of individual anti-XV constraints, and modified negative constraint to call it
	Updated entropy Battenburg code to allow addition of individual anti-entropy Battenburgs, and modified negative constraint to call it